--- a/Round4/file40.Rmd
+++ b/Round4/file40.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Logistic Regression (main effects only, original space)"
 author: "Jonathan Rosenblatt"
-date: "23/1/2019"
+date: "24/3/2019"
 output: html_document
 editor_options: 
   chunk_output_type: console
@@ -9,7 +9,7 @@ editor_options:
 
 ```{r}
 n.permutations <- 3e2
-n.replications <-  1e2
+n.replications <-  1e3
 ```
 
 
@@ -23,8 +23,8 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-makeLogisticSetup(p, beta00=1/p, B00=0)
-effects <- c(0,1,10)
+makeLogisticSetup(p, beta00=1/sqrt(p), B00=0)
+effects <- c(0,5,10)
 ```
 
 
@@ -61,6 +61,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
                     noise = noise, 
                     labels = labels, 
                     fold.ids = fold.ids)
+    
     
     # Permute
     old.labels <- labels
