--- a/Round4/file41.Rmd
+++ b/Round4/file41.Rmd
@@ -23,7 +23,7 @@ n.folds <- 4
 
 source('Gilron Effect of Cross Validatino.R')
 
-makeLogisticSetup(p, beta00=1/p, B00=1/p)
+makeLogisticSetup(p, beta00=1/sqrt(p), B00=1/p)
 effects <- c(0,5,10)
 ```
 
