--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -124,44 +124,48 @@ In particular: two-group tests dominate accuracy tests, and signal is masked in 
 
 Shift alternatives are the most common signal model in the univariate statistical literature. 
 They are also very common in the multivariate literature, as they are implied by Fisher's LDA problem setup, and in multivariate analysis of variance (MANOVA).
-On the other hand, effects may manifest themselves in many ways. 
-We thus verify our statements in models which are not ``pure shifts''. 
+On the other hand, effects may manifest themselves in many ways, not necessarily in location. 
+We now verify our claims in models which are not ``pure shifts''. 
 These include logistic regression, and a mixture class. 
 
 
 \subsection{Logistic Regression}
 
 In Figure~\ref{fig:logistic-main-and-interactions} we report the usual power simulation, when generating from a logistic regression setup with both main effects, and second order interactions.
-This exact setup is also reported in the main text.
+This setup is also reported in the main text.
 
 Formally, the logistic assumption implies that 
 $P(y=1|x)=\exp(\eta)/[1+\exp(\eta)]$.
 Main-effects and second order interaction imply that 
-$\eta=x'\beta+x'Bx$, for some $p$-vector $\beta$, and symmetric $p \times p$ matrix $B$.
-We also assume $x\sim \mathcal{N}(0,I_{p\times p})$.
-We perform the various tests in the original space, $x$, but also in the $276$ dimensional pace of main effects and second order interactions: 
+$\eta=\beta_0+x'\beta +x'Bx$, for some $p$-vector $\beta$, and symmetric $p \times p$ matrix $B$.
+We also assume $x \sim \mathcal{N}(0,I_{p\times p})$.
+We perform the various tests in the original space, $x$, but also in the $276$~dimensional pace of main effects and second order interactions: 
 $$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots,x_p x_p).$$
 
 From Figure~\ref{fig:logistic-main-and-interactions} we learn that two-group tests dominate accuracy tests also in the logistic setup.
 Was this to be expected, given our conclusions on multivariate shifts?
-In the logistic setup $x_1$ is not a shifted version of $x_0$, but their means certainly differ. 
-The larger the main effects, the larger the different in means.
-This suggests that a main-effect-only model ($B=0$) will be similar to a shift class, and a second-order-interactions-only model may be very different than a shift class.
+In the logistic setup $x_1$ is not a shifted version of $x_0$, but their location certainly differ. 
+The larger the main effects, the larger the different in location.
+This suggests that a main-effect-only model ($B=0$) will be roughly similar to a shift class, and a second-order-interactions-only model may be very different than a shift class.
 To isolate these two cases, we simulate a main-effects-only setup (Fig.~\ref{fig:logistic-main-only}), and an interaction-only setup (Fig.~\ref{fig:logistic-interactions-only}).
 
+
 The main-effect-only case in Figure~\ref{fig:logistic-main-only} is not very surprising: 
-the groups differ in their first moment, so that our conclusions are almost identical to the ``pure shift'' examples in the main text. 
+the groups differ in their first moment, so that our conclusions are almost identical to the ``pure shift'' examples in the main text.
 Analyzing the data in the augmented $276$ dimensional space decreases power, since the problems increases in dimension, and many more parameters need to be estimated. 
 
-The second-order-interactions-only case in Figure~\ref{fig:logistic-interactions-only} is interesting. 
+It may also be surprising that in the original space, $x$, it is easier to detect main effects only, than main effects with interactions (Fig.\ref{fig:interactions-in-original-space} vs. Fig.\ref{fig:main-only-original-space}). 
+Why does adding more signal (i.e. effects) reduces power? 
+Well, the signal added is not part of the $x$ space, so for detection algorithm operating in $x$ (not $\tilde{x}$), this is actually part of the noise. 
+This intuition is confirmed when analyzing in $\tilde x$: it is indeed easier to detect signal with interactions, than main effects only (Fig.\ref{fig:interactions-in-augmented-space} vs. Fig.\ref{fig:main-only-augmented-space}).
+
+The second-order-interactions-only case in Figure~\ref{fig:logistic-interactions-only} is of particular interest. 
 From Figure~\ref{fig:quadratic-form} we see that in this setup $x_1$ is roughly a scaled version of $x_0$.
 In the context of machine-learning, and in particular learning in kernel spaces, this is sometimes known as a \emph{ring problem}.
-Because $B$ is a scaled matrix of ones, and thus has the same symmetries as $x$, then $x_0$ and $x_1$ have the same first moment. 
-We thus expect that tests for shifts would have poor performance. 
-This is indeed the case: no test has any power. 
-Surprisingly, the two-group GOF tests have no power either.
-[TODO: file46 for large saple verification. can we offer some intuition?]
-
+When all signal is in the scatter of the distribution, we expect that tests for shifts would have poor performance. 
+This intuition is confirmed: in the original space $x_0$ and $x_1$ have the same location and shift detectors have no power at all (Fig.\ref{fig:logistic-interactions-only-original}). 
+In the augmented space, $x_0$ and $x_1$ differ in location so that shift detectors are re-powered (Fig.\ref{fig:logistic-interactions-only-augmented}). 
+Most importantly for practitioners, the high-dim GOF tests detect the change in scatter in all these cases. 
 
 
 \begin{figure}[th]
@@ -175,10 +179,10 @@ Surprisingly, the two-group GOF tests have no power either.
 	\begin{subfigure}[t]{.45\columnwidth}
 		\centering
 		\includegraphics[width=1\columnwidth]{"art/file45"}
-		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
+		\caption{TODO: update. Data analyzed in augmented interactions space ($\tilde x$).}
 		\label{fig:interactions-in-augmented-space}
 	\end{subfigure}
-	\caption{\textbf{Logistic regression with second order interactions.} 
+	\caption{\textbf{Logistic regression. Main effects and interactions.} 
 		Data generated via $y|x \sim Binom(1,p(x));
 		p(x)=\exp(\eta)/[1+\exp(\eta)];
 		\eta=x'\beta+x'Bx$ where 
