--- a/Round4/Manuscript/permutaing_accuracy.tex
+++ b/Round4/Manuscript/permutaing_accuracy.tex
@@ -50,7 +50,7 @@
 	We find that the probability of detecting differences between two distributions is lower for accuracy based statistics.
 	We examine several candidate causes for the low power of accuracy-tests. 
 	These causes include: the discrete nature of the accuracy-test statistic, the type of signal accuracy-tests are designed to detect, their inefficient use of the data, and their suboptimal regularization. 
-	When the purpose of the analysis is not signal detection, but rather, the evaluation of a particular classifier, we suggest several improvements to increase power. 
+	When the purpose of the analysis is the evaluation of a particular classifier, not signal detection, we suggest several improvements to increase power. 
 	In particular, to replace V-fold cross-validation with the Leave-One-Out Bootstrap.
 	}
 \end{abstract}
@@ -103,9 +103,9 @@ These can be classified along the following lines:
 \textbf{Two-group, high-dim, goodness of fit tests}-- Tests that seek for any difference between two multivariate distributions. GOF in short.
 \textbf{Two-group, high-dim, location tests}-- Tests the seek for a shift in mean vectors. Shifts may be in many coordinates (dense), or only in a few (sparse). 
 
-At this point, it becomes unclear which test is preferable, in particular for genetics and neuroimaging?
+At this point, it becomes unclear which test is preferable, in particular for genetics and neuroimaging.
 In this manuscript, we do not provide a full answer to the matter.
-Instead, we merely seek to demonstrate that in high-dim \textbf{accuracy-tests never have more power than two-group tests}.
+Instead, we seek to demonstrate that in the high dimensional regime \textbf{accuracy-tests never have more power than two-group tests}.
 Our recommendations to the practitioner in these high-dim problems:
 (i) Prefer a two-group test over an accuracy-test. 
 (ii) Appropriate regularization is crucial. 
@@ -132,9 +132,9 @@ This means that Fisher's LDA requires at least $6.3$ times more samples to achie
 In this light, the accuracy-test is remarkably inefficient.  
 For comparison, the t-test is only $1.04$ more (asymptotically) efficient than Wilcoxon's rank-sum test \citep{lehmann_parametric_2009}, so that an ARE of $6.3$ is strong evidence in favor of the two-group test. 
 
-The analysis in \cite{ramdas_classification_2016} is asymptotic. 
-Since typical sample sizes in neuroscience and genetics are not large, we seek to study which test is to be preferred in finite samples, and not only asymptotically.
-Lacking a unifying mathematical framework for the finite sample power analysis, we opt for a simulation study. 
+We study the power of many accuracy, and two-sample methods, in a large scale simulation study. 
+This allows us to evaluate theoretical results such as \citet{ramdas_classification_2016}, in a small-sample setup.
+We find this setup particularly important for neuroimaging, and genetic applications, where the sample acquisition is expensive, and the samples high-dimensional. 
 
 We start with formalizing the problem in Section~\ref{sec:problem_setup}.
 The main findings are reported in Sections~\ref{sec:results}, and \ref{sec:example}, with extensions in the online supplementary material (SM). 
@@ -180,7 +180,7 @@ The sketch of our permutation test is the following: \newline
 (c) Permute labels and recompute the statistic $\mathcal{T}_\pi$. \newline
 (d) Repeat (b)-(c) $R$ times. \newline
 (e) The permutation p-value is the proportion of  $\mathcal{T}_\pi$ larger than the observed $\mathcal{T}$. Formally: 
-$\mathbb{P}\{\mathcal{T}_\pi \geq \mathcal{T}\}:=\frac{1}{R+1} \sum_{\pi} I\{\mathcal{T}_\pi \geq \mathcal{T}\}$.\newline
+$\mathbb{P}\{\mathcal{T}_\pi \geq \mathcal{T}\}:=\frac{1}{R} \sum_{\pi} I\{\mathcal{T}_\pi \geq \mathcal{T}\}$.\newline
 (f) Declare $\mathcal{F}\neq \mathcal{G}$ if the permutation p-value is smaller than $\alpha$, which we set to $\alpha=0.05$.
 \bigskip
 
@@ -188,7 +188,7 @@ $\mathbb{P}\{\mathcal{T}_\pi \geq \mathcal{T}\}:=\frac{1}{R+1} \sum_{\pi} I\{\ma
 
 \subsection{Two-Group Tests}
 The most prevalent interpretation of $\mathcal{F}\neq \mathcal{G}$ is to assume they differ in means (this is not a logical equivalence, but rather a prevalent convention. The Behrnes-Fisher problem is a counter example where equal means do not imply equal distributions). 
-Difference in means leads to the \emph{shift class} of alternatives, which is by far the most studied class in the statistical literature. 
+Difference only in means leads to the \emph{shift class} of alternatives, which is by far the most studied class in the statistical literature. 
 In his seminal work in 1931, Harold Hotelling proposed the $T^2$ test as a straightforward generalization of the t-test, for testing the equality in means of two multivariate distributions \citep{hotelling_generalization_1931}. 
 For more background see, for example, \cite{anderson_introduction_2003}.
 
@@ -214,15 +214,19 @@ We now explain how an accuracy-test is constructed.
 \subsection{Prediction Accuracy as a Test Statistic}
 An accuracy-test amounts to using a predictor's accuracy as a test statistic.  
 Denoting a dataset by $\data:=\{(x_i,y_i)\}_{i=1}^n$, a predictor, $\hyp:\mathcal{X} \to \mathcal{Y}$, is the output of a learning algorithm $\algo$ when applied to the dataset $\data$. 
-The accuracy of a predictor, also known as (the complement of) the \emph{test error}, $\acc_{\hyp}$, is defined as the probability of $\hyp$ making a correct prediction. 
-The accuracy of a learning algorithm, also known  as (the complement of) the \emph{expected test error}, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
+The accuracy of a predictor, $\acc_{\hyp}$, is defined as the probability of $\hyp$ making a correct prediction for a new data point. 
+It is also known as (the complement of) the \emph{test error}.
+The accuracy of a learning algorithm, $\acc_{\algo}$, is defined as the expected accuracy over all possible data sets $\data$. 
+It is also known as also known as (the complement of) the \emph{expected test error}
 Formalizing, we denote by $\measure$ the probability measure of $(x, y)$, and by $\measuren$ the joint probability measure of the sample $\data$. 
 We can then write $\acc_{\hyp}:=\int_{(x,y)} \indicator{\hyp(x)=y} \; d\measure,$
 and
 $\acc_{\algo}:=\int_\data \acc_{\algo_\data} \; d\measuren,$
 where $\indicator{A}$ is the indicator function of the set $A$. 
 
-Denoting an estimate of $\acc_{\hyp}$ by $\accEstim_{\hyp}$, and $\acc_{\algo}$ by $\accEstim_{\algo}$, a statistically significant ``better than chance'' estimate of either, is evidence that the classes are distinct. 
+If $y$ is independent of $x$, then $\hyp$ cannot capture any signal and is no more accurate than a coin flip (for balanced classes). 
+This is known as \emph{chance level}.
+A statistically significant better-than-chance-level estimate of $\acc_{\algo}$, or $\acc_{\hyp}$, is evidence that the classes are distinct. 
 Two popular estimates of $\accEstim_{\algo}$ are the \emph{resubstitution accuracy}, also known as (the complement of) the \emph{train-error}, and the V-fold cross-validation (CV) estimate.
 \begin{definition}[Resubstitution accuracy]
 	\label{def:resubstitution}
@@ -233,7 +237,8 @@ Two popular estimates of $\accEstim_{\algo}$ are the \emph{resubstitution accura
 
 \begin{definition}[V-fold CV accuracy]
 	\label{def:v-fold}
-	Denoting by $\data^{v}$ the $v$'th partition, or \emph{fold}, of the dataset, and by $\data^{(v)}$ its complement, so that $\data^{v} \union \data^{(v)}=\union_{v=1}^V \data^{v}=\data$, the V-fold CV accuracy estimator, denoted $\accEstim_{\algo}^{Vfold}$, is defined as 	
+	Denote by $\data^{v}$ the $v$'th partition, or \emph{fold}, of the dataset, and by $\data^{(v)}$ its complement.
+	The V-fold CV accuracy estimator, denoted $\accEstim_{\algo}^{Vfold}$, is defined as 	
 	$\accEstim_{\algo}^{Vfold} := 
 	\frac 1V \sum_{v=1}^{V} \frac{1}{|\data^v|} \sum_{i \in \data^{v}} \indicator{\hypFun{\data^{(v)}}{x_i}=y_i},$
 	where $|A|$ denotes the cardinality of a set $A$.
@@ -253,14 +258,14 @@ Should the data be refolded after each permutation?
 
 We will now address these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of $\acc_{\algo}$, but rather in the detection of its departure from chance level. 
 
-\paragraph{cross-validate or not}
-For the purpose of statistical testing, bias in $\hat\acc_{\algo}$ is not a problem, as long as it does not invalidate the error rate guarantees. 
+\paragraph{Cross-validate or not?}
+For the purpose of statistical testing, bias in $\hat\acc_{\algo}$ is not a problem, as long as it does not invalidate false positive rate guarantees. 
 The underlying intuition is that if the same bias is introduced in all permutations, it will not affect the properties of the permutation test. 
 We will thus be considering both unbiased cross-validated accuracies, and biased resubstitution accuracies.
 
 
 \paragraph{Balanced folding}
-The standard practice in V-fold CV is to constrain the data folds to be balanced, i.e. stratified \cite[for e.g.]{ojala_permutation_2010}.
+The standard practice in V-fold CV is to constrain the data folds to be balanced, a.k.a.\ stratified \cite[for example]{ojala_permutation_2010}.
 This means that each fold has the same number of examples from each class. 
 We will report results only with balanced folding, mostly because we will conclude that V-fold CV should not be used for our detection problem. 
 
@@ -274,7 +279,7 @@ We will adhere to this practice due to its popularity, even though it is computa
 
 \paragraph{How many folds}
 Different authors suggest different rules for the number of folds. 
-We fix the number of folds to $V=4$, and do dot discuss the effect of $V$ because we will ultimately show that V-fold CV is dominated by other cross-validation procedures, and thus, never recommended. 
+We fix the number of folds to $V=4$, and do not discuss the effect of $V$ because we will ultimately show that V-fold CV is dominated by other cross-validation procedures, and thus, never recommended. 
 
 \bigskip
 
@@ -349,16 +354,17 @@ where $\y_i \in \mathcal{Y}=\set{0,1}$ encodes the class of observation $i$, $\m
 The covariance $\Sigma=I$. 
 In this basic setup, reported in Figure~\ref{fig:simulation_1}, the shift effect is captured by $\mu$. 
 Shifts are dense and equal in all $p$ coordinates of $\mu$.
-We set $\mu:=c \, e$ where $e$ is a $p$-vector of ones. 
+We set $\mu:=c \, \textbf{e}$ where $\textbf{e}$ is a $p$-vector of ones. 
 We will use $c$ to index the signal's strength, and vary it over $c \in \set{0,1/4,1/2}$.
-With $\Sigma=I$ then the (squared) Euclidean and Mahalanobis norms of the signal are $\Vert \mu \Vert_2^2=\Vert \mu \Vert_\Theta^2=\mu' \Sigma^{-1} \mu= c^2 p\approx \{0,1.4,5.7\}$ [TODO:verify], where $\Theta:=\Sigma^{-1}$. 
-These can be thought as the SNR. 
+With $\Sigma=I$ then the (squared) Euclidean and Mahalanobis norms of the signal are $\Vert \mu \Vert_2^2=\Vert \mu \Vert_\Sigma^2=\mu' \Sigma^{-1} \mu= c^2 p\approx \{0,1.4,5.7\}$ [TODO:verify]. 
+These can be thought as measures of signal-to-noise (SNR). 
 
 Having generated the data, we compute each of the test statistics in Table~\ref{tab:collected}.
 We then compute a permutation p-value by permuting the class labels, and recomputing each test statistic. 
 We perform $300$ such permutations. 
 We then reject the $\mathcal{F}=\mathcal{G}$ null hypothesis if the permutation p-value is smaller than $0.05$.
-The reported power is the proportion of replication where the permutation p-value fell below $0.05$.
+The reported power is the proportion of replicates where the permutation p-value fell below $0.05$.
+The number of replicates is above $500$, so that the standard errors of our estimates are no larger than $1.5\%$, and $0.6\%$ under the null. 
 
 
 
@@ -381,7 +387,7 @@ We may thus proceed and compare the power of each test statistic.
 \subsubsection{Power}
 \label{sec:power}
 
-From Figure (\ref{fig:simulation_1}) we learn that in our simulation setup, two-group tests are more powerful than accuracy-tests.
+From Figure (\ref{fig:simulation_1}) we learn that in our first simulation setup, two-group tests are more powerful than accuracy-tests.
 This is most notable for the intermediate signal strength (green triangles). 
 
 \begin{figure}[h]
@@ -403,7 +409,7 @@ This is most notable for the intermediate signal strength (green triangles).
 We focus on high-dim--small-sample configurations because of our motivation in neuroimaging and genetics. 
 Our results, however, also  hold in the high-dim--large-sample configurations.
 To prove this point, we increase the scale of the problem by one order of magnitude: we fix $p/n$ at $23/40$, and set $n=400, p=230$. 
-The results are qualitatively similar to the high-dim--small-sample of, and reported in the online supplementary material (SM).
+The results are qualitatively similar to the high-dim--small-sample in Fig.\ref{fig:simulation_1}, and reported in the online supplementary material (SM).
 
 
 \subsection{Departure From Gaussianity}
@@ -435,7 +441,7 @@ We thus do not know if the conclusions from the uncorrelated case (Fig.~\ref{fig
 
 We simulate various correlation structures.
 We also vary the direction of the signal, $\mu$, and distinguish between signal in high variance principal component (PC) of $\Sigma$ and in the low variance PC. 
-To keep the comparisons fair as the correlations vary, we kept $\Vert \mu \Vert_\Theta:=\sqrt{\mu'\Theta\mu}$ fixed.
+To keep the comparisons fair as the correlations vary, we kept $\Vert \mu \Vert_\Sigma:=\sqrt{\mu'\Sigma^{-1}\mu}$ fixed.
 This matter is discussed in Section~\ref{sec:fix_snr}.
 
 
@@ -597,7 +603,7 @@ It can also be seen that power increases with the number of bootstrap replicatio
 
 Our best performing tests alleviate the high dimensionality of the problem by regularizing the estimation of $\Sigma$. 
 By comparing the non-regularized $T^2$ to its regularized versions we see that in our high-dim setup, regularization adds power. 
-Regularization is achieved by thresholding the entries of $\hat{\Sigma}$, or inflating its diagonal, thus shrinking $\hat \Theta$. 
+Regularization is achieved by thresholding the entries of $\hat{\Sigma}$, or inflating its diagonal, thus shrinking $\hat \Sigma^{-1}$. 
 Shrinking is used in the \emph{Schafer} statistic.
 Thresholding is used in the \emph{Goeman} and \emph{Srivastava} statistics.
 
@@ -787,7 +793,7 @@ In the shifted Gaussian case, this is equivalent to fixing the Kullback–Leible
 
 Our choice implies that the Euclidean norm of $\mu=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
-This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Theta}$.
+This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Sigma}$.
 
 For verification, we report the power when fixing the Euclidean norm between population means in the SM.
 
