--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -327,7 +327,8 @@ where $\mu:=\mu_1-\mu_0$.
 %For a dense shift of equal magnitude, $\mu=(c,\dots,c)$, so that $\Vert \mu \Vert_2^2=p \, c^2$. 
 
 In most of our simulations we fixed $n \Vert \mu \Vert_\Theta^2$. 
-The logistic regression setup is an exception because... [TODO: relate to logistic regression]
+The logistic regression setup is an exception because the signal is not a shift. 
+We did set effect sizes so that power in the logistic regression is comparable to power in the other examples.
 
 Fixing $n \Vert \mu \Vert_\Theta^2$ implies that the Euclidean norm of $\mu$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
